feat: Ajout du profil de préférence de mobilité
